logger/target/wasm32-unknown-unknown/release/build/tempfile-95e780708fa85cb6/stderr
error[E0433]: failed to resolve: could not find `windows` in `os`
 --> <anon>:1:27
  |
1 | pub trait Probe: std::os::windows::io::AsHandle + Sized {}
  |                           ^^^^^^^ could not find `windows` in `os`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
